--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
         <activity
-            android:name=".media"
+            android:name=".MediaActivity"
             android:exported="false" />
         <activity
-            android:name=".search"
+            android:name=".SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".settings"
+            android:name=".SettingsActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
