--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
         <activity
+            android:name=".AudioPlayer"
+            android:exported="false"
+            android:theme="@style/Theme.PlaylistMakerPlayer"/>
+        <activity
             android:name=".MediaActivity"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerMedia"/>
