--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,24 +16,24 @@
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
         <activity
-            android:name=".AudioPlayer"
+            android:name=".presentation.ui.player.AudioPlayer"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerPlayer"/>
         <activity
-            android:name=".MediaActivity"
+            android:name=".presentation.ui.media.MediaActivity"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerMedia"/>
         <activity
-            android:name=".SearchActivity"
+            android:name=".presentation.ui.search.SearchActivity"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerSearch"/>
 
         <activity
-            android:name=".SettingsActivity"
+            android:name=".presentation.ui.settings.SettingsActivity"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerSettings"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.ui.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.PlaylistMakerMain">
             <intent-filter>
