--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".App"
+        android:name=".utils.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -20,7 +20,7 @@
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerPlayer"/>
         <activity
-            android:name=".presentation.ui.media.MediaActivity"
+            android:name=".media.ui.media.MediaActivity"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerMedia"/>
         <activity
@@ -29,11 +29,11 @@
             android:theme="@style/Theme.PlaylistMakerSearch"/>
 
         <activity
-            android:name=".presentation.ui.settings.SettingsActivity"
+            android:name=".settings.ui.SettingsActivity"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerSettings"/>
         <activity
-            android:name=".presentation.ui.main.MainActivity"
+            android:name=".main.ui.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.PlaylistMakerMain">
             <intent-filter>
