--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".utils.App"
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,24 +16,24 @@
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
         <activity
-            android:name=".player.ui.TrackPlayerActivity"
+            android:name=".presentation.ui.player.AudioPlayer"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerPlayer"/>
         <activity
-            android:name=".media.ui.media.MediaActivity"
+            android:name=".presentation.ui.media.MediaActivity"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerMedia"/>
         <activity
-            android:name=".search.ui.SearchActivity"
+            android:name=".presentation.ui.search.SearchActivity"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerSearch"/>
 
         <activity
-            android:name=".settings.ui.SettingsActivity"
+            android:name=".presentation.ui.settings.SettingsActivity"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerSettings"/>
         <activity
-            android:name=".main.ui.main.MainActivity"
+            android:name=".presentation.ui.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.PlaylistMakerMain">
             <intent-filter>
