--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,23 +19,12 @@
             android:name=".player.ui.TrackPlayerActivity"
             android:exported="false"
             android:theme="@style/Theme.PlaylistMakerPlayer"/>
-        <activity
-            android:name=".media.ui.media.MediaActivity"
-            android:exported="false"
-            android:theme="@style/Theme.PlaylistMakerMedia"/>
-        <activity
-            android:name=".search.ui.SearchActivity"
-            android:exported="false"
-            android:theme="@style/Theme.PlaylistMakerSearch"/>
 
-        <activity
-            android:name=".settings.ui.SettingsActivity"
-            android:exported="false"
-            android:theme="@style/Theme.PlaylistMakerSettings"/>
         <activity
             android:name=".main.ui.main.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.PlaylistMakerMain">
+            android:theme="@style/Theme.PlaylistMakerMain"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,5 +32,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
